Added pagination to the user details page
